objects/TP_Section_Auto_Evaluate_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Evaluate_Date_Field__c</fullName>
        <defaultValue>"Evaluation_Date__c"</defaultValue>
        <label>Auto Evaluate Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field__c</fullName>
        <label>Base Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Criteria__c</fullName>
        <label>Custom Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Added_to_Base_Date__c</fullName>
        <label>Days Added to Base Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trigger_Old_Value__c</fullName>
        <label>Field Trigger Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trigger_Value__c</fullName>
        <label>Field Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trigger__c</fullName>
        <label>Field Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchplan_Section__c</fullName>
        <label>Touchplan Section</label>
        <referenceTo>Touchplan_Section__c</referenceTo>
        <relationshipLabel>Touchplan Section Auto Evaluate Criterias</relationshipLabel>
        <relationshipName>TP_Section_Auto_Evaluate_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TP Section Auto Evaluate Criteria</label>
    <nameField>
        <label>Touchplan Section Auto Evaluate Criteria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TP Section Auto Evaluate Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Touchplan_Section__c</columns>
        <columns>Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>